# Face_Cropper_128-128-Rust_ONNX_Inference_with_Frontend

./: .gitignore  Cargo.toml  README.md
face_cropper_linux_package/: run.sh
src/: cli.rs  detection.rs  image_ops.rs  main.rs  nms.rs  utils.rs
ui_frontend/: README.md  app.py
