[package]
name = "face_cropper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "face_cropper"
path = "src/main.rs"

[dependencies]
# Core image loading/resizing
image        = "0.24.7"

# NDArray support for constructing ONNX inputs
ndarray      = "0.15.6"

# ONNX Runtime bindings
ort          = "1.15.2"

# Walk a directory (recursive or single-level)
walkdir      = "2.3.3"

# Logging (info/warn/error)
log          = "0.4"
env_logger   = "0.10"

# Parallel iteration over batches
rayon        = "1.5"

# Random flips/jitter
rand         = "0.8"

# Command-line argument parsing
clap         = { version = "4.1", features = ["derive"] }
